--- a/spalmer.css
+++ b/spalmer.css
@@ -5,6 +5,8 @@ body {
 .header {
     display: flex;
     align-items: center;
+    text-decoration: none;
+    color: black;
 }
 
 .title {
@@ -21,6 +23,28 @@ body {
 .main {
     margin: 60px 60px;
     width: 50%;
+}
+
+@media screen and (max-width: 600px) {
+	.main {
+        margin: 10px 10px;
+	}
+
+    .header {
+        display: block;
+    }
+
+    .title {
+        margin-top: 15px;
+        font-family: Great Vibes;
+        font-size: 30px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+	.main {
+		width: 90%;
+	}
 }
 
 p {
